--- a/dev/sass/_setupGroup.scss
+++ b/dev/sass/_setupGroup.scss
@@ -4,15 +4,19 @@
     font-weight: 500;
     border-radius: 5px 5px 0 0;
     overflow: hidden;
+    max-width: 600px;
+
 }
 .startgroupcont{
     // border:1px solid red;
     background-color: $colorMain2;
-    padding: 20px 10px 20px 10px;
+    padding: 20px 10px 20px 50px;
     font-size: $content;
     border-radius: 0 0 5px 5px;
     overflow: hidden;
     margin: 0 auto;
+    max-width: 600px;
+
 }
 .startgtitle{
     color: $colorMain1;
@@ -59,7 +63,7 @@ input[type="file"] {
 }
 .noticetxthere{
     resize : none;
-    width:430px;
+    width: 300px;
     height:80px;
     vertical-align:top;
     margin-top:10px;
@@ -72,13 +76,14 @@ input[type="file"] {
 .threestatus{
     display: flex;
     justify-content: space-around;;
-    margin-left: 150px;
+    // margin-left: 150px;
     margin-top: 30px;
     padding: 5px;
 }
 @media screen and (max-width: $breakpoint-sm){
     .startgroupall{
         width: 100%;
+        padding: 20px 10px 20px 10px;
         min-width: 300px;
     }
     .plusfile{
