--- a/dev/sass/_setupGroup.scss
+++ b/dev/sass/_setupGroup.scss
@@ -25,6 +25,7 @@
     // margin: 0 auto;
     max-width: 500px;
     margin: 0 auto;
+    margin-bottom: 100px;
 
 }
 .startgtitle{
@@ -98,6 +99,9 @@ input[type="file"] {
         padding-left: 10px;
     
     }
+    .startgroupcont{
+        padding: 10px;
+    }
     .startgroupall{
         width: 100%;
         padding: 20px 10px 20px 10px;
@@ -108,19 +112,30 @@ input[type="file"] {
     }
     .noticetxthere {
         width:87%;
-      } 
+    } 
+    .selectreqst{
+        padding-left: 20px;
+    }
     .selectreq2{
         width: 100%;
         margin: 0px;
+        padding-left: 20px;
+    }
+    .selectreq3{
+        padding-left: 20px;
     }
     .threestatus{
         // margin: 0px 120px 0px 0px;
         // width: 85%;
         margin: 0 auto;
-        display: flex;
-        justify-content: space-between;
+        // display: flex;
+        // justify-content: space-between;
         width: 120px;
-
+        transform: translateX(0px);
+        input{
+            padding-left: 5px;
+            padding-right: 5px;
+        }
     }
 
 }
